Z-index fixes.

--- a/_sass/_sidenav.sass
+++ b/_sass/_sidenav.sass
@@ -8,7 +8,7 @@
   background-color: #fff
   border-radius: 50%
   box-shadow: 0px 0px 10px #D4D4D4
-  z-index: 2
+  z-index: 3
   &:hover
     cursor: pointer
   span
@@ -36,7 +36,7 @@ aside
   top: 0
   right: 0
   bottom: 0
-  z-index: 1
+  z-index: 2
   background-color: #fff
   box-shadow: -1px 0 5px #B9B9B9
   text-align: center
