--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -480,7 +480,7 @@ tbody.collapse.in {
 .carousel-indicators {
   position: absolute;
   bottom: 10px;
-  z-index: 15;
+  z-index: 1 !important;
   width: 60%;
   margin-left: -30%;
   padding-left: 0;
